--- a/index.html
+++ b/index.html
@@ -1,12 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap-Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+    <link rel="next" href="contact.html">
+    <link rel="next" href="portfolio.html">
+    <link rel="next" href="index.html">
+
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="row">
+            <nav class="navbar fixed-top" style="background-color: #ffffff;">
+
+                <div class="col-md-2"></div>
+
+                <span class="navbar-brand mb-0 h1" class="col-md-2">James Inch</span>
+
+                <div class="col-md-3"></div>
+
+                <a class="nav-item nav-link" href="index.html" class="col-md-1">Index </a>
+
+                <a class="nav-item nav-link" href="portfolio.html" class="col-md-1">Portfolio</a>
+
+                <a class="nav-item nav-link" href="contact.html" class="col-md-1">Contact</a>
+
+                <div class="col-md-2"></div>
+
+            </nav>
+        </div>
+    </div>
+    <div id="wrapper" class="container" style="padding: 20px;">
+
+        <div class="row">
+
+            <h1 class="col-md-3">About Me</h1>
+            <div class="col-md-9"></div>
+
+        </div>
+        <div class="row">
+
+            <div class-"col-md-3">
+                <img src="assets/img/biopic.jpg" style="width:200px;height:150px;">
+            </div>
+
+            <div class="col-md-9">
+                <p> I was born in England in 1992(26 years old), I lived in Stoke-on-trent until I was 11. In 2003 my family
+                    and I moved to North Carolina. I graduated from Mallard creek Highschool in 2010, after which I shipped
+                    off to Marine Corps basic training at MCRD Paris Island, SC. I joined the Marines to be an aviation mechanic,
+                    more specifically a Hydraulic technicion/ Airframe mechanic. After bootcamp and Marine Combat Trainnig,
+                    I headed down to Naval Air Station Pencacola, FL. I graduated top of my class which enabled me to choose
+                    which platform I would ultimately be working on. I chose the CH-53, the Sea Stalion, which is a Heavy
+                    lift troop transport helicopter. The training for the CH-53 took me to Marine Corps Air Station(MCAS)
+                    New River. After graduating top of my class, again, our entire class got orders to be stationed at MCAS
+                    Kaneohe Bay HI.
+                </p>
+            </div>
+
+        </div>
+
+        <br>
+
+        <p>
+            I Like to consider myself the adventurous type, in the four years I lived in Hawaii I spent most of my time hiking, mountain
+            biking, skating and cliff jumping. I started a motorcycle club called Scallywags MC, with some friends I
+            met throuht my tattoo artist. It was a legit club, we got promision from the Oahu Motorcycle Club Counsil
+            to wear a 3 piece patch as long as our bottom rocker didnt read, Hawaii, Oahu or Honolulu. So naturally we
+            claimed the seven seas.
+        </p>
+
+
+    </div>
+
+    <footer class="footer bg-secondary fixed-bottom">
+        <div class="container ">
+        </div>
+      </footer>
+
 </body>
+
 </html>
